<resources>
    <string name="app_name">Psycho Manager</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="psycho_kernel">Psycho Kernel</string>
    <string name="psycho_tag">Go Psycho!</string>
    <string name="logo_desc">Psycho Kernel Logo</string>
    <string name="device_head">"Device: "</string>
    <string name="unknown">Unknown</string>
    <string name="version_head">"Kernel Version: "</string>
    <string name="type_head">"Build Type: "</string>
    <string name="date_head">"Build Date: "</string>
    <string name="status_head">"Status: "</string>
    <string name="last_head">"Last Check: "</string>
    <string name="channel_head">"Update Channel: "</string>
    <string name="check_upd_start">Check for updates on App startup</string>
    <string name="beta_sign">Check for beta releases</string>
    <string name="upd_checking">Checking for updates…</string>
    <string name="profile">Profiles</string>
    <string name="psycho_profile">Psycho</string>
    <string name="psycho_prof_desc">The default Psycho Kernel profile tuned for providing a good battery backup with no noticeable effect on device\'s performance.</string>
    <string name="profile_battery">Battery</string>
    <string name="battery_prof_desc">F*** the performance, just give me my ultimate battery backup.</string>
    <string name="profile_performance">Performance</string>
    <string name="performance_prof_desc">Profile tuned to push your device performance a notch while still trying to save some juice.</string>
    <string name="profile_gaming">Gaming</string>
    <string name="game_prof_desc">Unleash the beast, kill some bad guys or be the MVP, all with ease.</string>
    <string name="custom_warn_head">Custom Settings</string>
    <string name="custom_warn_desc">You have changes to kernel settings which will be overridden if you change the profile.</string>
    <string name="applying_values_on_boot">Applying settings in %d seconds</string>
    <string name="psycho_version">"Psycho Version: "</string>
    <string name="latest_version">"Latest Version: "</string>
    <string name="set_prof_start">Apply profile on Device Boot</string>
    <string name="new_update">New Update!</string>
    <string name="dialog_version">Psycho Kernel v%1$s</string>
    <string name="download_size">"Download Size: "</string>
    <string name="size_value">%1$s MB</string>
    <string name="download_button">Download</string>
    <string name="cancel_button">Later</string>
</resources>
