<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="52dp">

    <TextView
        android:id="@+id/settings_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height='wrap_content'
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="?android:attr/colorBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="12dp"
        app:layout_constraintTop_toBottomOf="@id/settings_head"
        app:strokeColor="@color/colorStroke"
        app:strokeWidth="@dimen/cardStrokeWidth">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/profile_start"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settingSep"
                android:text="@string/set_prof_start"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/upd_start"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settingSep"
                android:text="@string/check_upd_start"
                app:layout_constraintTop_toBottomOf="@id/profile_start"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/beta_sign"
                android:layout_width="match_parent"
                android:layout_height="@dimen/settingSep"
                android:text="@string/beta_sign"
                app:layout_constraintTop_toBottomOf="@id/upd_start"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>