<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="?android:attr/colorBackground"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="true"
    app:contentPadding="12dp"
    app:strokeColor="@color/colorStroke"
    app:strokeWidth="@dimen/cardStrokeWidth">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_update"
            android:textSize="28sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/vers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/head"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/size_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_size"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/vers"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/size_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/vers"
            app:layout_constraintStart_toEndOf="@id/size_head" />

        <TextView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textAllCaps="true"
            android:text="@string/download_button"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size_value" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textAllCaps="true"
            android:text="@string/cancel_button"
            android:textColor="@color/colorGame"
            android:textSize="16sp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/size_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>